@@ -572,13 +572,14 @@ detects.  With the Players parameter, it will even attack players as well.
 BEHAVIOR_FOLLOWER=\
 Behavior   : Follower\n\r\
 Targets    : MOBs, Items\n\r\
-Parameters : min, max, pct (inv) (group) (nofollowers) (follow mask)\n\r\
+Parameters : min, max, pct (inv) (group) (nofollowers) (follow mask) (name=[name])\n\r\
 Example    : \n\r\
 Example    : min=1 max=1 chance=50 -race +elf\n\r\
 Example    : group nofollowers -race +elf +gnome\n\r\
 Example    : min=4 max=20 chance=100 inv -race +elf +gnome\n\r\
 Description: \n\r\
-The mob with this behavior will follow any other mob that leaves the room.  A chance \
+The mob with this behavior will follow any other mob that leaves the room.  Following \
+normally happens on the tick, but if minticks and maxticks are -1, it will be instant. A chance \
 percentage (1-100) parameter may be given to better randomize the opportunity.  A \
 group flag may also be included to make the mob join the targets group instead of \
 merely following them out of the room.  The rate of non-grouping following is \
@@ -593,6 +594,7 @@ will always appear in the same room as the first it comes across.  The \
 rate of reappearance is dictated by the min and max ticks. Items with \
 this behavior can not be sold to shopkeepers.\n\r\
 \n\r\
+A name may be given to limit the person followed to only that name. \
 A mask may also be given to define what sort of targets are elligible \
 to be followed by the mob or item.  Valid masks include: \n\r\
 <ZAP=ignore> 
