@@ -1,4 +1,5 @@
 # Build 5.9.? Released ??/??/2016
+   1. Follower behavior now has a few more options.
 
 # Build 5.9.2 Released 02/09/2016
    1. Apprentice now gets bonus common skill.
